--- a/index.html
+++ b/index.html
@@ -34,5 +34,5 @@
   <app-root> </app-root>
 
   <script src="https://kit.fontawesome.com/e802a17a48.js" crossorigin="anonymous"></script>
-<script type="text/javascript" src="../runtime.6a1dfd8af8dcb2cab549.js"></script><script type="text/javascript" src="../es2015-polyfills.1e04665e16f944715fd2.js" nomodule></script><script type="text/javascript" src="../polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="styles.f9391ae55a532f5abd4c.js"></script><script type="text/javascript" src="vendor.385b09fa88324f76b5e1.js"></script><script type="text/javascript" src="../main.c96dda1f348b0266a456.js"></script></body>
+<script type="text/javascript" src="./runtime.6a1dfd8af8dcb2cab549.js"></script><script type="text/javascript" src="./es2015-polyfills.1e04665e16f944715fd2.js" nomodule></script><script type="text/javascript" src="../polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="./styles.f9391ae55a532f5abd4c.js"></script><script type="text/javascript" src="./vendor.385b09fa88324f76b5e1.js"></script><script type="text/javascript" src="./main.c96dda1f348b0266a456.js"></script></body>
 </html>
