--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
    integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous"> -->
-   <link rel="stylesheet" href="./job application form.css">
+<!--    <link rel="stylesheet" href="./job application form.css"> -->
      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Courier+Prime|Ma+Shan+Zheng&display=swap" rel="stylesheet">
   <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous"></style>
-<!-- <script src="http://code.jquery.com/jquery-latest.js"></script> -->
+<script src="http://code.jquery.com/jquery-latest.js"></script>
 <!-- Below Links are added for viewdetails -->
 
 <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> -->
@@ -34,5 +34,5 @@
   <app-root> </app-root>
 
   <script src="https://kit.fontawesome.com/e802a17a48.js" crossorigin="anonymous"></script>
-<script type="text/javascript" src="./runtime.6a1dfd8af8dcb2cab549.js"></script><script type="text/javascript" src="./es2015-polyfills.1e04665e16f944715fd2.js" nomodule></script><script type="text/javascript" src="../polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="./styles.f9391ae55a532f5abd4c.js"></script><script type="text/javascript" src="./vendor.385b09fa88324f76b5e1.js"></script><script type="text/javascript" src="./main.c96dda1f348b0266a456.js"></script></body>
+<script type="text/javascript" src="./runtime.6a1dfd8af8dcb2cab549.js"></script><script type="text/javascript" src="./es2015-polyfills.1e04665e16f944715fd2.js" nomodule></script><script type="text/javascript" src="./polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="./styles.f9391ae55a532f5abd4c.js"></script><script type="text/javascript" src="./vendor.385b09fa88324f76b5e1.js"></script><script type="text/javascript" src="./main.c96dda1f348b0266a456.js"></script></body>
 </html>
